20040320 libspectrum.c,libspectrum.h.in: add an 'Even M1' capability.
20040401 libspectrum.h.in,sna.c,szx.c,z80.c: minimalistic +3e support.
20040402 libspectrum.c,timings.c: enough to make the +3e support actually
	 usable by Fuse.
20040402 libspectrum.h.in,tape.c: add libspectrum_tape_write() function.
20040402 libspectrum.c: add capabilities for the +3e.
20040408 Makefile.am,configure.in,myglib.c,myglib/{.cvsignore,Makefile.am}:
	 move the glib replacement code into its own directory.
20040408 myglib/Makefile.am,myglib/ghash.c: add minimal GHashTable
	 replacement (borrowed from glib 2.4.0).
20040414 myglib/gslist.c: fix two free_list related memory leaks.
20040415 make-perl.c,myglib/ghash.c: fix compilation with GHashTable
	 replacement (borrowed code from glib 2.4.0 and 1.2.10).
20040417 make-perl.c,myglib/ghash.c: the world doesn't need to know about
         GHashNode.
20040513 libspectrum.c,libspectrum.h.in,szx.c,timings.c: add support for
	 the Spectrum SE (part of patch #929112) (Fred).
20040513 timings.c: improved timings for the TC2048 and TC2068 (more of
	 patch #929112) (Fred).
20040514 szx.c: use symbolic constants for the .szx machine numbers.
20040514 szx.c: allow loading of +3e snaps to work.
20040519 accessor.pl,sna.c,snap_accessors.txt,snapshot.c,szx.c,z80.c:
	 add support for saving ZXCF information in .szx snapshots.
20040521 accessor.pl,sna.c,snap_accessors.txt,snapshot.c,szx.c,z80.c:
         add support for saving interface 2 cart in .szx snapshots.
20040521 szx.c: remove warnings.
20040521 szx.c: save RAM page 8 for the Spectrum SE.
20040521 sna.c,z80.c: allow SE (sna/z80) and Scorpion (z80) snapshots to
	 be (badly) saved.
20040525 accessor.pl,sna.c,snap_accessors.txt,szx.c,z80.c: add support for
         saving Timex Dock/Exrom information in .szx snapshots.
20040525 szx.c: Timex Dock/Exrom pages aren't 0x4000 bytes long.
20040526 accessor.pl,internals.h,snapshot.c,szx.c: tidy up snapshot
	 alloc/free routines.