@@ -62,16 +62,16 @@ static timings_t base_timings[] = {
                    /* /- Horizonal -\  /-- Vertical -\ */
   { 3500000,       0, 24, 128, 24, 48, 48, 192, 48, 24, 14336 }, /* 48K */
   { 3500000,       0, 24, 128, 24, 48, 47, 192, 48, 25, 14336 }, /* TC2048 */
-  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14361 }, /* 128K */
-  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14361 }, /* +2 */
+  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14362 }, /* 128K */
+  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14362 }, /* +2 */
   { 3546900, 1773400, 36, 128, 28, 32, 64, 192, 48, 16, 17988 }, /* Pentagon */
-  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14361 }, /* +2A */
-  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14361 }, /* +3 */
+  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14362 }, /* +2A */
+  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14362 }, /* +3 */
   { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 },			  /* Unknown machine */
   { 3500000,       0, 24, 128, 24, 48, 48, 192, 48, 24, 14336 }, /* 16K */
   { 3500000, 1750000, 24, 128, 24, 48, 47, 192, 48, 25, 14336 }, /* TC2068 */
   { 3546900, 1773400, 24, 128, 32, 40, 48, 192, 48, 24, 14336 }, /* Scorpion */
-  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14361 }, /* +3e */
+  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14362 }, /* +3e */
   { 3500000, 1750000, 24, 128, 24, 48, 47, 192, 48, 25, 14336 }, /* SE */
 };
 
